batch: fixed batch file formatting bug